Fix for #164, Full Parameter List was unreadable in indoor mode, changed alternate color to be better suited for readability

--- a/files/styles/style-indoor.css
+++ b/files/styles/style-indoor.css
@@ -460,3 +460,7 @@ QLabel#toolBarMessageLabel {
 	color: #3C7B9E;
 }
 
+QTableWidget {
+background-color: #222224;
+alternate-background-color: #444444;
+}
